--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -1,3 +1,7 @@
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+body {
+    font-family: Roboto, sans-serif;
+  }
+.main-size{
+    height: auto;
+}
